# urchin-old

./: README.rst  setup.cfg  setup.py
etc/: urchin.conf
urchin/: service.py  util.py  utils.py  wsgi.py
urchin/cmd/: compute.py
urchin/compute/: manage.py  power_state.py  wsgi.py
urchin/pci/: utils.py
urchin/utils/: lockutils.py
urchin/utils/log/: log.py
urchin/virt/: driver.py  event.py  hardware.py
urchin/virt/libvirt/: config.py
