[metadata]
name = urchin
version = 10
summary = Cloud computing fabric controller
description-file =
    README.rst
author = urchin
author-email = openstack-dev@lists.openstack.org
home-page = http://www.liuwfng.net/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    urchin

console_scripts =
    urchin-compute = urchin.cmd.compute:main